--- a/Views/Shared/_PartialPopularProductsWidget.cshtml
+++ b/Views/Shared/_PartialPopularProductsWidget.cshtml
@@ -1,7 +1,7 @@
 ﻿ 
 @model IEnumerable<Product>
 <!-- Popular Products -->
-<div class="sidebar-widget related-posts">
+<div class="sidebar-widget related-posts" id="partial-popular-product-div">
     <div class="sidebar-title">
         <h2>Popüler Ürünler</h2>
         <div class="separater"></div>
