--- a/Views/Cart/Inquiry.cshtml
+++ b/Views/Cart/Inquiry.cshtml
@@ -1,14 +1,14 @@
-﻿    @model BirileriWebSitesi.Models.BasketAggregate.Basket
+﻿    @model BirileriWebSitesi.Models.InquiryAggregate.Inquiry
 @section Title {
-    <meta name="title" content="Sepet">
-    <title>Sepet</title>
+    <meta name="title" content="Teklif Listesi">
+    <title>Teklif Listesi</title>
 }
 @section Description {
     <meta name="description" content="İthal ürünleri toptan ve perakende olarak satın alın. Katalog ürünleri, marka patent desteği ve e-ticaret çözümleri sunuyoruz.">
 }
 @section Keywords {
     <meta name="keywords" content="Çin ithalat, toptan ürünler, perakende satış, marka patent, e-ticaret çözümleri, toptan spor malzemeleri ithalatı, marka desteği, toptan petshop ürünleri,
-                                    toptan spor malzemesi">
+                                        toptan spor malzemesi">
 }
 
 
@@ -16,29 +16,29 @@
 @Html.AntiForgeryToken()
 <input name="__RequestVerificationToken" type="hidden" value="TOKEN_VALUE" />
 <!--Cart Section-->
-<section class="cart-section" id="cart-content">
-    @Html.Partial("_PartialCart",Model)
+<section class="cart-section" id="inquiry-content">
+    @Html.Partial("_PartialInquiry", Model)
 </section>
 <!--End Cart Section-->
 @section FancyBox {
     <script src="~/js/jquery.fancybox.min.js" defer></script>
 }
-@section TouchSpin{
+@section TouchSpin {
     <script src="~/js/jquery.bootstrap-touchspin.js" defer></script>
 }
-@section AdditionalScripts{
+@section AdditionalScripts {
     <script>
         $(document).ready(function (){
 
             $(".dropdown").removeClass("current");
-            $(".cart").addClass("current");
+            $(".inquiry").addClass("current");
             initializeQuantitySpinner();
             $(document).on("click", ".remove-btn", function () {
                 var productCode = $(this).data("productcode");
                 var button = $(this);
                 $.ajax({
                     type: "POST",
-                    url: "/Cart/RemoveCartItem",
+                    url: "/Cart/RemoveInquiryItem",
                     data: {
                         productCode: productCode,
                     },
@@ -46,24 +46,24 @@
                     headers: { "RequestVerificationToken": getAntiForgeryToken() },
                     async:true,
                     success: function (response) {
-                        $("#cart-content").html(response);
+                        $("#inquiry-content").html(response);
                     },
                     error: function (xhr) {
                         var response = JSON.parse(xhr.responseText);
-                        
+
                     }
                 });
                 $.ajax({
                     type: "POST",
-                    url: "/Cart/InitializeCartNumber",
+                    url: "/Cart/InitializeInquiryNumber",
                     async: true,
                     success: function (response) {
                         let currentItem = response.message;
-                        $(".cart .cart-count").text(currentItem);
+                        $(".inquiry .inquiry-count").text(currentItem);
                     },
                     error: function (xhr) {
                         var response = JSON.parse(xhr.responseText);
-                        
+
                     }
                 });
             });
@@ -73,7 +73,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "/Cart/CartItemAmountChanged",
+                    url: "/Cart/InquiryItemAmountChanged",
                     headers: { "RequestVerificationToken": getAntiForgeryToken() },
                     data: {
                         productCode: productCode,
@@ -81,12 +81,12 @@
                     },
                     async: true,
                     success: function (response) {
-                        $("#cart-content").html(response);
+                        $("#inquiry-content").html(response);
                         initializeQuantitySpinner();
                     },
                     error: function (xhr) {
                         var response = JSON.parse(xhr.responseText);
-                        
+
                     }
                 });
             });
