--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,7 +27,6 @@
 
     <!--Color Themes-->
     <link id="theme-color-file" href="~/css/color-themes/default-theme.css" rel="stylesheet">
-
     @RenderSection("CSS", required: false)
     <style>
         <!-- alert modal -->
@@ -88,27 +87,22 @@
             border: 1px solid #f5c6cb;
         }
 
-        <!--cart-->
-        .cart-container {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background-color: #007bff;
+
+        .cart-container,
+        .inquiry-container {
+
             color: white;
-            padding: 10px 15px;
-            border-radius: 50px;
+            padding: 5px 5px;
+            border-radius: 130px;
             display: flex;
             align-items: center;
             cursor: pointer;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            position: relative; /* Optional but safe */
         }
 
-        .cart-icon {
-            font-size: 24px;
-            margin-right: 5px;
-        }
-
-        .cart-count {
+        .cart-count,
+        .inquiry-count {
             background-color: red;
             color: white;
             font-size: 14px;
@@ -188,7 +182,7 @@
                 <div class="logo top-left pull-left " >
                     <a asp-controller="Home" asp-action="Index" class="img-responsive">
                         <picture>
-                            <source srcset="@Url.Content("~/images/logo-small.avif")" class="logo-image" type="image/avif" width="auto" height="30">
+                            <source srcset="@Url.Content("~/images/logo-small.avif")" class="logo-image" type="image/avif" width="auto" height="20">
                             <img alt="Logo" loading="lazy" class="logo-image"
                                  src="@Url.Content("~/images/logo-small.png")" />
                         </picture>
@@ -253,11 +247,21 @@
                                     <li class="dropdown about">
                                         <a asp-controller="Home" asp-action="About">Hakkında</a>
                                     </li>
-                                    <li class="dropdown cart">
+                                    <li class="dropdown cart mb-4">
                                         <a asp-controller="Cart" asp-action="Index">
                                             <div class="cart-container">
-                                            <span class="cart-icon">🛒</span>
+                                                <span class="cart-icon" style="font-size:28px;">🛒</span>
                                             <span class="cart-count" id="itemCount">0</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="dropdown inquiry">
+                                        <a asp-controller="Cart" asp-action="Inquiry">
+                                            <div class="inquiry-container">
+                                                <span class="inquiry-icon" style="font-size:28px;">
+                                                    📝
+                                                </span>
+                                                <span class="inquiry-count" id="inquiryItemCount">0</span>
                                             </div>
                                         </a>
                                     </li>
@@ -324,11 +328,21 @@
                                     <li class="dropdown about">
                                         <a asp-controller="Home" asp-action="About">Hakkında</a>
                                     </li>
-                                    <li class="dropdown cart">
+                                    <li class="dropdown cart mb-1">
                                         <a asp-controller="Cart" asp-action="Index">
                                             <div class="cart-container">
-                                                <span class="cart-icon">🛒</span>
+                                                <span class="cart-icon" style="font-size:28px;">🛒</span>
                                                 <span class="cart-count" id="cartCount">0</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="dropdown inquiry">
+                                        <a asp-controller="Cart" asp-action="Inquiry">
+                                            <div class="inquiry-container">
+                                                <span class="inquiry-icon" style="font-size:28px;">
+                                                    📝
+                                                </span>
+                                                <span class="inquiry-count" id="inquiryItemCount">0</span>
                                             </div>
                                         </a>
                                     </li>
@@ -656,6 +670,7 @@
     <script>
         $(document).ready(function () {
             let count = 0;
+            let countInquiry = 0;
            
                 $.ajax({
                     type: "POST",
@@ -664,6 +679,19 @@
                     success: function (response) {
                         let currentItem = response.message;
                         $(".cart .cart-count").text(currentItem);
+                    },
+                    error: function (xhr) {
+                        var response = JSON.parse(xhr.responseText);
+
+                    }
+                });
+                $.ajax({
+                    type: "POST",
+                    url: "/Cart/InitializeInquiryNumber",
+                    async: true,
+                    success: function (response) {
+                        let currentItem = response.message;
+                        $(".inquiry .inquiry-count").text(currentItem);
                     },
                     error: function (xhr) {
                         var response = JSON.parse(xhr.responseText);
@@ -681,7 +709,19 @@
             $("#decrease").click(function () {
                 if (count > 0) {
                     count--;
-                    updateCart();
+                    updateInquiry();
+                }
+            });
+            $("#increaseInquiry").click(function () {
+                countInquiry++;
+
+                updateCart();
+            });
+
+            $("#decreaseInquiry").click(function () {
+                if (countInquiry > 0) {
+                    countInquiry--;
+                    updateInquiry();
                 }
             });
             $(document).on("click", ".subscribe-btn", function () {
@@ -801,6 +841,11 @@
             $("#cartCount").text(count);
             $("#itemCount").text(count);
             $("#decrease").prop("disabled", count === 0);
+        }
+        function updateInquiry() {
+            $("#inquiryCount").text(count);
+            $("#inquiryItemCount").text(count);
+            $("#decreaseInquiry").prop("disabled", count === 0);
         }
         function getCookie(name) {
             var match = document.cookie.match(new RegExp('(^| )' + name + '=([^;]+)'));
