--- a/Views/Shop/Index.cshtml
+++ b/Views/Shop/Index.cshtml
@@ -571,6 +571,44 @@
                     }
                 });
             });
+            //add to inquiry
+            $(document).on("click", ".add-to-inquiry", function () {
+                var userId = $(this).closest('.clearfix').find('.user-id').val();
+                var productCode = $(this).closest('.clearfix').find('.product-code').val();
+                var price = parseFloat($(this).closest('.clearfix').find('.price').val());
+                var quantity = parseInt($(this).closest('.clearfix').find('.quantity').val());
+                var button = $(this);
+
+                $.ajax({
+                    type: "POST",
+                    url: "/Cart/AddToInquiry",
+                    headers: { "RequestVerificationToken": getAntiForgeryToken() },
+                    async: true,
+                    data: {
+                        userId: userId,
+                        productCode: productCode,
+                        price: price,
+                        quantity: quantity
+                    },
+                    success: function (response) {
+                        if(response.success){
+                            showAlert(button, response.message, "success");
+                            let currentItem = response.totalProduct;
+                            $(".inquiry .inquiry-count").text(currentItem);
+                        }
+                        else{
+                            showAlert(button, response.message, "error");
+                            let currentItem = response.totalProduct;
+                            $(".inquiry .inquiry-count").text(currentItem);
+                        }
+                    },
+                    error: function (xhr) {
+                        var response = JSON.parse(xhr.responseText);
+
+                        showAlert(button, response.message, "danger");
+                    }
+                });
+            });
 
             // Close button handler
             // document.getElementById("closeMobileSidebar").addEventListener("click", function () {
