--- a/Views/Shared/_PartialProductVariantInfo.cshtml
+++ b/Views/Shared/_PartialProductVariantInfo.cshtml
@@ -2,7 +2,7 @@
 
     <h4 id="variant-name">@Model.VariantName</h4>
     <input type="hidden" id="variant-code" value="@Model.VariantCode"/>
-    <input type="hidden" id="quantity" value="@model.Quantity" />
+    <input type="hidden" id="quantity" value="@Model.Quantity" />
     <div class="rating">
         <span class="fa fa-star"></span>
         <span class="fa fa-star"></span>
