--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -188,7 +188,7 @@
                                 
                                 <div class="other-options clearfix">
                                     @* <div class="item-quantity"><input class="quantity-spinner" type="text" value="1" name="quantity"></div> *@
-                                    @if (item.ProductVariantInfo.Quantity > 0)
+                                    @if (Model.ProductVariantInfo.Quantity > 0)
                                     {
                                         <span class="alert-text"></span>
                                         <button type="button" class="theme-btn btn-style-one add-to-cart" style="margin-top:20px;">Sepete Ekle</button>
