Update _PartialProductCard minorder  quantity.cshtml

--- a/Views/Shared/_PartialProductCard.cshtml
+++ b/Views/Shared/_PartialProductCard.cshtml
@@ -65,7 +65,7 @@
                                 <input type="hidden" class="user-id" value="@userId" />
                                 <input type="hidden" class="product-code" value="@item.ProductCode" />
                                 <input type="hidden" class="price" value="@actualPrice" />
-                                <input type="hidden" class="quantity" value="@item.MinOrder" />
+                                <input type="hidden" class="quantity" value="1" />
                                 <span class="alert-text"></span>
                                 @if (item.Banner == "Stokta")
                                 {
