--- a/Views/Shared/_PartialInquiry.cshtml
+++ b/Views/Shared/_PartialInquiry.cshtml
@@ -71,7 +71,12 @@
                 <!--Totals Table-->
                 <ul class="totals-table">
                     <li class="clearfix total"><span class="col">Toplam</span><span class="col ">@Model.TotalAmount ₺</span></li>
-                    <li class="text-right"><a class="theme-btn proceed-btn" asp-controller="Order" asp-action="CheckOutInquiry" style="cursor:pointer;">İstek Gönder</a></li>
+                    <li class="text-right">
+                        <form asp-controller="Order" asp-action="CheckOutInquiry" method="post" style="display:inline;">
+                            @Html.AntiForgeryToken()
+                            <button type="submit" class="theme-btn proceed-btn" style="cursor:pointer;">İstek Gönder</button>
+                        </form>
+                    </li>
                 </ul>
             </div>
 
