--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -486,7 +486,7 @@
                 var userId = $(this).closest('.clearfix').find('.user-id').val();
                 var productCode = $('#variant-code').val();
                 var price = $('#variant-price').text();
-                var quantity = 1;
+                var quantity = "1";
 
                 var button = $(this);
                 $.ajax({
@@ -525,7 +525,7 @@
                 var userId = $(this).closest('.clearfix').find('.user-id').val();
                 var productCode = $('#variant-code').val();
                 var price = $('#variant-price').text();
-                var quantity = 1;
+                var quantity = "1";
 
                 var button = $(this);
                 $.ajax({
