--- a/Views/Shared/_PartialPopularProductsWidget.cshtml
+++ b/Views/Shared/_PartialPopularProductsWidget.cshtml
@@ -6,14 +6,18 @@
         <h2>Popüler Ürünler</h2>
         <div class="separater"></div>
     </div>
-    <div class="owl-carousel owl-theme" id="popular-product-carousel">
-        @foreach (Product item in Model)
+</div>
+
+<div class="swiper popular-products-swiper" id="popular-product-carousel">
+    <div class="swiper-wrapper">
+        @foreach (var item in Model)
         {
-            <div class="item">
+            <div class="swiper-slide">
                 <div class="post text-center p-2">
                     <figure class="post-thumb">
                         <a asp-controller="Shop" asp-action="ProductDetailed" asp-route-productCode="@item.ProductCode">
-                            <img loading="lazy" src="@Url.Content($"~/images/resource/products/{item.ProductCode}/1.jpg")" alt="@item.ProductName"
+                            <img loading="lazy" src="@Url.Content($"~/images/resource/products/{item.ProductCode}/1.jpg")"
+                                 alt="@item.ProductName"
                                  style="width: 180px; height: 180px; object-fit: cover;" />
                         </a>
                     </figure>
@@ -32,7 +36,10 @@
             </div>
         }
     </div>
-
-    
-    
 </div>
+    
+    
+    
+
+
+
