--- a/Views/Cart/Inquiry.cshtml
+++ b/Views/Cart/Inquiry.cshtml
@@ -67,6 +67,34 @@
                     }
                 });
             });
+            $(document).on("click", "#checkout-inquiry", function () {
+                
+                var button = $(this);
+                $.ajax({
+                    type: "POST",
+                    headers: { "RequestVerificationToken": getAntiForgeryToken() },
+                    async: true,
+                    url: "/Order/CheckOutInquiry",
+                    success: function (response) {
+                        if(response.success)
+                        {
+                               showAlert(button, response.message, "success");
+                                let currentItem = response.totalProduct;
+                                $(".cart .cart-count").text(currentItem);
+                        }
+                         else{
+                            showAlert(button, response.message, "error");
+                            let currentItem = response.totalProduct;
+                            $(".cart .cart-count").text(currentItem);
+                        }
+                    },
+                    error: function (xhr) {
+                        var response = JSON.parse(xhr.responseText);
+
+                        showAlert(button, response.message, "danger");
+                    }
+                });
+            });
             $(document).on("click", ".bootstrap-touchspin", function () {
                 var productCode = $(this).closest("td").find(".quantity-spinner").data("productcode");
                 var quantity = $(this).closest("td").find(".quantity-spinner").val();
