--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -485,7 +485,7 @@
             $(document).on("click", ".add-to-cart", function () {
                 var userId = $(this).closest('.clearfix').find('.user-id').val();
                 var productCode = $('#variant-code').val();
-                int quantity = 1;
+                var quantity = 1;
                 var price = parseFloat($('#variant-price').text());
                
                 var button = $(this);
