--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -525,7 +525,7 @@
                 var userId = $(this).closest('.clearfix').find('.user-id').val();
                 var productCode = $('#variant-code').val();
                 var price = parseFloat($('#variant-price').text());
-                int quantity = 1;
+                var quantity = 1;
 
                 var button = $(this);
                 $.ajax({
